<resources>
    <string name="app_name">Video Editor</string>
    <string name="rangeSeekBarText">Use RangeSeekbar to select time range for cutting video or extracting images from video(rangeseekbar ineffective for other options)</string>
    <string name="uploadVideo">Upload\nVideo</string>
    <string name="compressVideo">Compress\nVideo</string>
    <string name="cutVideo">Cut\nVideo</string>
    <string name="extractImages">Extract\nImages</string>
    <string name="extractAudio">Extract\nAudio</string>
    <string name="addFade">Add\nFade in-out</string>
    <string name="increaseSpeed">Fast\nMotion</string>
    <string name="decreaseSpeed">Slow\nMotion</string>
    <string name="reverseVideo">Reverse\nVideo</string>
    <string name="dialogMessage">The process will take some time.Please be patient.</string>
    <string name="uploadAudio">Upload Audio</string>
    <string name="merge">Merge</string>
    <string name="banner">ca-app-pub-3940256099942544/1033173712</string>
    <string name="reward">ca-app-pub-3940256099942544/1033173712</string>
    <string name="join">Join</string>
    <string name="zeroHour">00:00:00</string>

</resources>
